<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/back1"
    tools:context="ir.boozar.databasecreator.ActivityMain">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/head"
            android:id="@+id/head"
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:src="@drawable/back"
            android:layout_alignBottom="@+id/head"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:visibility="gone"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainMenu"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/head">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recipes"
                android:text="@string/recipes_guide"
                android:layout_marginTop="30dp"
                android:textColor="#FFF"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brewing"
                android:text="@string/brewing"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:textColor="#FFF"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/videos"
                android:text="@string/videos"
                android:layout_marginTop="5dp"
                android:textColor="#FFF"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:text="@string/rating"
                android:layout_marginTop="5dp"
                android:textColor="#FFF"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exit"
                android:text="@string/exit"
                android:layout_marginTop="5dp"
                android:textColor="#FFF"/>
        </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categories"
        android:visibility="gone"
        android:layout_below="@+id/head">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoriesC"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:id="@+id/ad"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wait"
        android:scaleType="fitXY"
        android:id="@+id/wait"
        />
</RelativeLayout>
